# OI-Remake-Simulator

./: .gitignore  BUILD.md  CLAUDE.md  CMakeLists.txt  LICENSE  NOTICE  README.md  build.bat  build_mingw.bat  compile.bat  events.hpp  game.hpp  main.cpp  problem_pool.hpp  training_events_data.hpp  types.hpp
.claude/: settings.local.json
